tests/baselines/reference/parserGreaterThanTokenAmbiguity16.errors.txt
==== tests/cases/compiler/parserGreaterThanTokenAmbiguity16.ts (1 errors) ====
    1 >>>= 2;
    ~
!!! parserGreaterThanTokenAmbiguity16.ts(1,1): error TS2130: Invalid left-hand side of assignment expression.